--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,18 @@
 body {
   @apply bg-slate-950 text-slate-300;
 }
+
+.inputText {
+  width: 100%;
+  height: 29.5px;
+  background-color: transparent;
+  font-size: 16px;
+  min-width: 170px;
+  background-color: #334155b5;
+}
+
+
+.inputText:focus {
+  outline: none;
+  border: 1px solid #00B5D8;
+}
